--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Heello!</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <h1 style="color:blue">Hello, world!</h1>
         <h1>welcome to my web page</h1>
         <h2>i added a new line</h2>
     </body> 
