--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,15 @@
 <html lang="en">
     <head>
         <title>Heello!</title>
+        <style>
+            hi{
+                color:blue;
+            }
+        </style>
     </head>
     <body>
 
-        <h1 style="color:blue">Hello, world!!</h1>
+        <h1>Hello, world!!</h1>
         <h1>welcome to my web page</h1>
         <h2>i added a new line</h2>
     </body> 
