--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-        <h1 style="color:blue">Hello, world!!</h1>
+        <h1 style="color:blue">Hello, world!</h1>
         <h1>welcome to my web page</h1>
         <h2>i added a new line</h2>
     </body> 
